# sage-lightcone

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  CMakeLists.txt  COLUMNAR_ITERATION1_PROGRESS.md  COMPUTED_FIELDS.md  FIELD_NAMING.md  PHASE2_LUSTRE_FIX_SUMMARY.md  PHASE2_LUSTRE_PERFORMANCE.md  PRIORITY1_VALIDATION_SUMMARY.md  README.md  REMOVE_COMPOUND_TYPES_PLAN.md  SAGE2KDTREE_IMPROVEMENTS.md  SAGE_PLAN_SAGE2H5_INPUT_H5.md  SAGE_PLAN_SAGEH5_TO_KDTREE.md  VISION.md  build_platform_aware.sh  check_nompi.sh  extern.cmake  install.sh  local.cmake  platform_config.cmake  project.cmake  requirements.txt  robust_build_platform_aware.sh  robust_verify_kdtree_output.sh  run_build.sh  setup.sh  setup_mac.sh  verify_kdtree.py  verify_kdtree_output.sh  verify_kdtree_output_mpi.sh
.cmake/: 3rd_party.cmake  FindFFTW2.cmake  FindFFTW3.cmake  FindGD.cmake  FindPugiXML.cmake  build.cmake  custom_targets.cmake
dep/pugixml-1.7/scripts/: CMakeLists.txt  cmake_install.cmake
dep/pugixml-1.7/src/: pugixml.cpp
dep/pugixml-1.7/tests/: allocator.cpp
extras/h5_to_csv/: H5_TO_CSV_README.md  compile_h5_to_csv.sh  h5_to_csv.cpp
extras/how_to_create_kdtree_index/: dsinit.cc  example_steps_to_create_kdtree_index.sh
plans/: ARRAYS.md  BATCH_SATELLITE_READS.md  BENCHMARK_CHANGES.md  BENCHMARK_SCRIPTS.md  CENTRAL_GALAXIES_INDEXING.md  FIELD_NAMING.md  IMPLEMENTATION_SIMPLIFY_SAGE2KDTREE_PHASES.md  NATIVE_ENDIAN_CHANGE.md  REMOVE_BOOST.md  SAGE_MPI_REPRODUCIBILITY_ISSUE.md  SAGE_PLAN_SAGEH5_TO_KDTREE.md  SAGE_REPRODUCIBILITY_ISSUE.md  SIMPLIFY_SAGE2KDTREE_PHASES.md  VALIDATE_SATELLITE.md  no_mpi_build.md
scripts/: lightcone.sh  sage2kdtree.sh
src/: local.cmake  plot_lightcone.py
src/apps/: cli_lightcone.cc  dstreeinit.cc  kdapplication.cc  kdapplication.hh  local.cmake  sage2h5.cc  sage2kdtree.cc  sage2kdtree_four.cc  sageh5toh5.cc  sageh5tokdtree.cc  sageh5toxml.cc  sageimport.cc
src/libhpc/: algorithm.hh  debug.hh  h5.hh  libhpc.hh  local.cmake  logging.hh  mpi.hh  numerics.hh  system.hh
src/libhpc.project/: local.cmake
src/libhpc/algorithm/: bin.hh  binary_partitioner.hh  brent.hh  counts.hh  cuda_helpers.hh  dual.hh  inner_product.hh  kdtree.hh  local.cmake  median.hh  morton.cc  morton.hh  multimatch.cc  multimatch.hh  newton.hh  permute.hh  reorder.hh  richardson.hh  ridders.hh  select.hh  sequence.hh  sequence_checks.hh  sort_by_key.hh  sort_permute2_iter.hh  sort_permute_iter.hh  split.hh  standard.hh  uniform.hh  xdmf_writer.cc  xdmf_writer.hh
src/libhpc/containers/: csr.hh  enumerator.hh  fibre.hh  grid.hh  local.cmake  po2_ring_buffer.hh  range.hh  range_map.hh  range_multimap.hh  range_set.hh
src/libhpc/debug/: assert.hh  assertions.cc  assertions.hh  except.hh  function.cc  function.hh  insist.hh  instrumentation.cc  instrumentation.hh  local.cmake  stacktrace.cc  stacktrace.hh
src/libhpc/h5/: buffer.cc  buffer.hh  dataset.cc  dataset.hh  dataspace.cc  dataspace.hh  datatype.cc  datatype.hh  derive.cc  derive.hh  file.cc  file.hh  group.cc  group.hh  local.cmake  location.cc  location.hh  property_list.cc  property_list.hh  types.hh
src/libhpc/logging/: block.cc  block.hh  file.cc  file.hh  globals.cc  globals.hh  instrument.cc  instrument.hh  levels.hh  local.cmake  logger.cc  logger.hh  omp_file.cc  omp_file.hh  stack.cc  stack.hh  stdout.cc  stdout.hh  syslogd.cc  syslogd.hh  thread_file.cc  thread_file.hh
src/libhpc/mpi/: application.cc  application.hh  assert.hh  async.cc  async.hh  checkpoints.hh  comm.cc  comm.hh  comm_proxies.hh  cuda.cc  cuda.hh  datatype.cc  datatype.hh  helpers.cc  helpers.hh  host.cc  host.hh  indexer.hh  init.cc  init.hh  insist.hh  local.cmake  logger.cc  logger.hh  main.hh  managed.hh  mpi_stub.hh  partition.cc  partition.hh  request.cc  request.hh  requests.cc  requests.hh  scatter.cc  scatter.hh  surjection.cc  surjection.hh  type_map.cc  type_map.hh  vct.cc  (+1 more)
src/libhpc/numerics/: clip.hh  constants.hh  coords.hh  dft.hh  eigen_matrix.hh  eigen_vector.hh  generators.hh  histogram.hh  integrate.hh  interp.hh  interp_iterator.hh  iqr.hh  kde.hh  least_squares.hh  local.cmake  matrix.hh  polynomial.hh  quadrature.hh  simpson.hh  spline.hh  spline_integrator.hh  tridiag.hh  vector.hh
src/libhpc/system/: anon.hh  application.cc  application.hh  array.hh  assign.hh  cc_version.hh  cuda.hh  deallocate.hh  file_descriptor.cc  file_descriptor.hh  filesystem.cc  filesystem.hh  functional.hh  has.hh  id.cc  id.hh  local.cmake  main.hh  mask.hh  math.hh  matrix.hh  narg.hh  path_finder.cc  path_finder.hh  random.cc  random.hh  reallocate.hh  stream.cc  stream.hh  string.hh  timer.hh  timer_handle.hh  (+5 more)
src/libtao/: local.cmake  tao.hh
src/sageimport_mpi_HDF2HDF/: ProcessTreeTraversal.py  SAGEReader.py  main.py  settingReader.py
tests/: 01_sbatch_mergetree2sage_minimillennium.sh  02_sbatch_sage2kdtree_minimillennium.sh  03_sbatch_kdtree2lightcone_minimillennium.sh  download_minimillennium.sh  dummy.h5  dummy.xml  first_run.sh  kdtree2lightcone.sh  mergetree2sage.sh  profile_xctrace_cli_lightcone.sh  profile_xctrace_sage2kdtree.sh  sage2kdtree.sh  setup_validate_kdtree_output.sh  test_cli_validation.sh  test_sage2kdtree_validation.sh  test_sage_hdf5.sh  test_sage_hdf5_mpi.sh  test_sageh5tokdtree.py  validate_and_time_centralgalaxies_option.sh  validate_and_time_workflow.sh  validate_kdtree_output.sh  validate_kdtree_output_mpi.sh  validate_satellites_batched.sh
tests/par_by_simulation/: minimillennium.par
tests/sage-model-tests/: BENCHMARK_CHANGES.md  BENCHMARK_SCRIPTS.md  benchmark_new_vs_binary.sh  benchmark_workflows.sh  robust_run_test_hdf5_one_step_benchmark.sh  run_setup_verify_kdtree_workflow.sh  run_test.sh  run_test_binary.sh  run_test_calculated_fields_from_lightcone.sh  run_test_calculated_fields_from_lightcone_filtered.sh  run_test_hdf5.sh  run_test_hdf5_benchmark.sh  run_test_hdf5_one_step.sh  run_test_hdf5_one_step_benchmark.sh  run_test_sage_hdf5.sh  run_test_sage_hdf5_mpi.sh  run_validate_and_time_centralgalaxies_option.sh  validate_sage2kdtree.sh
tests/utils/: benchmark_utils.sh  extract_settings.py
(+140 files in other folders)
